Add the poll form action and mockup voting page.

--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -5,7 +5,7 @@
 
 <main class="card card--light">
 
-  <form class="form" action="">
+  <form class="form" {{action "createPoll" model on="submit"}}>
     <fieldset class="form-field">
       <label class="form-label" for="question">Question</label>
       <input class="form-input" id="question" type="text">
