--- a/app/templates/polls/poll/results.hbs
+++ b/app/templates/polls/poll/results.hbs
@@ -1,1 +1,63 @@
-{{outlet}}
+<header class="header">
+  <h2>Welcome, Woodland Wanderers!</h2>
+  <p>Now that you"ve completed your training, here"s a quick quiz to test your skills.</p>
+</header>
+
+<main class="card card--light">
+
+  <h3 class="border">Which of the following is NOT part of the Woodland Wanderer Way?</h3>
+  <div class="border">
+    <div class="grid group">
+
+      <div class="card-content grid-box grid-box--3of5">
+
+        <ul class="list list--answer list--answer--flush">
+          <li class="list-item">
+            <span>Honesty</span>
+          </li>
+          <li class="list-item">
+            <span>Integrity</span>
+          </li>
+          <li class="list-item">
+            <span>Impatience</span>
+          </li>
+        </ul>
+
+      </div>
+
+      <div class="grid-box grid-box--2of5">
+
+        <div class="progress">
+          <p class="progress-info">1 votes (100%)</p>
+        </div>
+
+        <div class="progress">
+          <p class="progress-info">0 votes (0%)</p>
+        </div>
+
+        <div class="progress">
+          <p class="progress-info">0 votes (0%)</p>
+        </div>
+
+      </div>
+
+    </div>
+  </div>
+
+  <div class="actions">
+    {{link-to "Back" "polls.poll" class="btn btn--primary btn--back"}}
+  </div>
+
+</main>
+
+<footer class="footer">
+  <h4>Check Out Previous Quizzes from Woodland Wanderers:</h4>
+  <ul class="list list--space">
+    <li class="list-item"><a href="#">Which of the following is NOT part of the Woodland Wanderer Way?</a></li>
+    <li class="list-item"><a href="#">Which Poisonous Plant Are You?</a></li>
+  </ul>
+
+  <p class="footer-copyright">
+    <span class="footer-copyright-text">&copy; Woodland Wanderers</span>
+  </p>
+</footer>
