--- a/app/templates/polls.hbs
+++ b/app/templates/polls.hbs
@@ -3,8 +3,9 @@
 <footer class="footer">
   <h4>Check Out Previous Quizzes from Woodland Wanderers:</h4>
   <ul class="list list--space">
-    <li class="list-item"><a href="#">Which of the following is NOT part of the Woodland Wanderer Way?</a></li>
-    <li class="list-item"><a href="#">Which Poisonous Plant Are You?</a></li>
+    {{#each model as |poll|}}
+      <li class="list-item">{{link-to poll.prompt "polls.poll" poll}}</li>
+    {{/each}}
   </ul>
 
   <p class="footer-copyright">
