Add voteCounts and option selection.

--- a/app/templates/polls/poll/results.hbs
+++ b/app/templates/polls/poll/results.hbs
@@ -25,7 +25,7 @@
 
         {{#each model.options as |option|}}
           <div class="progress">
-            <p class="progress-info">XX votes (XX%)</p>
+            <p class="progress-info">{{option.voteCount}} votes (XX%)</p>
           </div>
         {{/each}}
       </div>
